[package]
name = "rustFirst"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-rustls", "macros", "bigdecimal"] }
bigdecimal = "0.4.6"  # 请使用最新版本
num-traits = "0.2.19"  # 添加 num-traits 依赖项
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "1.0"
config = "0.14.1"
dotenv = "0.15"